introduced RestTestClient test, fixed integration tests